@@ -3,10 +3,13 @@ package geektime.tdd.di;
 import jakarta.inject.Inject;
 
 import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Parameter;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
 
@@ -17,8 +20,23 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
 
     private final Constructor<T> injectConstructor;
 
+    private final List<Field> injectFields;
+
     public ConstructorInjectionProvider(Class<T> component) {
         this.injectConstructor = getInjectConstructor(component);
+        this.injectFields = getInjectFields(component);
+    }
+
+    private static <T> List<Field> getInjectFields(Class<T> component) {
+        List<Field> injectFields = new ArrayList<>();
+        Class<?> current = component;
+        while (current != Object.class) {
+            injectFields.addAll(stream(current.getDeclaredFields()).filter(
+                    f -> f.isAnnotationPresent(Inject.class)
+            ).collect(Collectors.toList()));
+            current = current.getSuperclass();
+        }
+        return injectFields;
     }
 
     static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
@@ -29,7 +47,7 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
 
         return (Constructor<Type>) injectConstructors.stream().findFirst().orElseGet(() -> {
             try {
-                return implementation.getConstructor();
+                return implementation.getDeclaredConstructor();
             } catch (NoSuchMethodException e) {
                 throw new IllegalComponentException();
             }
@@ -45,8 +63,12 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
                         Class<?> type = p.getType();
                         return context.get(type).get();
                     }).toArray(Object[]::new);
+            T instance = injectConstructor.newInstance(dependencies);
+            for (Field field : injectFields) {
+                field.set(instance, context.get(field.getType()).get());
+            }
 
-            return injectConstructor.newInstance(dependencies);
+            return instance;
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
             throw new RuntimeException(e);
         }
@@ -54,8 +76,8 @@ class ConstructorInjectionProvider<T> implements ContextConfig.ComponentProvider
 
     @Override
     public List<Class<?>> getDependencies() {
-        return stream(injectConstructor.getParameters()).map(
-                Parameter::getType
-        ).collect(Collectors.toList());
+        return Stream.concat(stream(injectConstructor.getParameters()).map(Parameter::getType),
+                injectFields.stream().map(Field::getType)
+        ).toList();
     }
 }
